--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,14 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
+    <!--为spring boot，提供有用的Maven默认值-->
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>1.5.3.RELEASE</version>
+        <version>2.1.7.RELEASE</version>
     </parent>
+
     <groupId>com.course.code</groupId>
     <artifactId>Chapter</artifactId>
     <packaging>pom</packaging>
@@ -31,6 +34,10 @@
         <module>Chapter9</module>
         <module>Chapter10</module>
         <module>Chapter11</module>
+        <module>Chapter12</module>
+        <module>Chapter13</module>
+        <!--        <module>Chapter10</module>
+                <module>Chapter11</module>-->
 
     </modules>
 
